--- a/projects/vs/libmeme_string/libmeme_string.vcxproj
+++ b/projects/vs/libmeme_string/libmeme_string.vcxproj
@@ -171,6 +171,7 @@
     <ClInclude Include="..\..\..\include\memepp\convert\rapidjson.hpp" />
     <ClInclude Include="..\..\..\include\memepp\convert\redis++.hpp" />
     <ClInclude Include="..\..\..\include\memepp\convert\self.hpp" />
+    <ClInclude Include="..\..\..\include\memepp\convert\std\string_view.hpp" />
     <ClInclude Include="..\..\..\include\memepp\convert\std\u16string.hpp" />
     <ClInclude Include="..\..\..\include\memepp\convert\std\vector.hpp" />
     <ClInclude Include="..\..\..\include\memepp\convert\std\string.hpp" />
