--- a/unit_test/mmpp_unittest/mmpp_unittest.vcxproj.filters
+++ b/unit_test/mmpp_unittest/mmpp_unittest.vcxproj.filters
@@ -18,5 +18,8 @@
     <ClCompile Include="mmpp_unittest.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="mmpp_string_split.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
