--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,7 +10,7 @@ endif()
 project(${PROJECT_NAME} VERSION 0.0.1 LANGUAGES C)
 
 # 设置 C 语言标准
-set(CMAKE_C_STANDARD 11)
+# set(CMAKE_C_STANDARD 11)
 set(CMAKE_C_STANDARD_REQUIRED ON)
 
 # 添加 include 路径
@@ -23,15 +23,18 @@ if (NOT WIN32)
 endif()
 
 # 设置编译选项
-set(CMAKE_C_VISIBILITY_PRESET hidden)
+# set(CMAKE_C_VISIBILITY_PRESET hidden)
 
 # 生成 shared 库
 file(GLOB SRC_FILES "src/*.c")
 add_library(${PROJECT_NAME} SHARED ${SRC_FILES})
 target_compile_definitions(${PROJECT_NAME} PRIVATE MEME_OPTION__BUILD_SHARED)
-target_link_libraries(${PROJECT_NAME} PRIVATE ${LINK_LIBS})
+target_compile_features(${PROJECT_NAME} PRIVATE c_std_11)
 target_include_directories(${PROJECT_NAME} PUBLIC include)
 target_include_directories(${PROJECT_NAME} PRIVATE 3rdparty/cvector/include include_private)
+target_link_libraries(${PROJECT_NAME} PRIVATE ${LINK_LIBS})
+set_target_properties(${PROJECT_NAME} PROPERTIES C_VISIBILITY_PRESET hidden)
+set_target_properties(${PROJECT_NAME} PROPERTIES POSITION_INDEPENDENT_CODE ON)
 
 # 设置 rpath
 set_target_properties(${PROJECT_NAME} PROPERTIES
