--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,7 @@ set (MEMESTRING_PROJECT_NAME ${MEME_PROJECT_NAME} PARENT_SCOPE)
 
 project(${MEME_PROJECT_NAME} VERSION 0.0.1 LANGUAGES C)
 
+option(MEMESTRING_SONAME_SUFFIX_DISABLE "Disable soname suffix" OFF)
 # 设置 C 语言标准
 # set(CMAKE_C_STANDARD 11)
 # set(CMAKE_C_STANDARD_REQUIRED ON)
@@ -45,7 +46,9 @@ set_target_properties(${MEME_PROJECT_NAME} PROPERTIES
 # 设置版本号
 # string(TIMESTAMP BUILD_DATE "%Y%m%d%H%M")
 
-set_target_properties(${MEME_PROJECT_NAME} PROPERTIES VERSION ${PROJECT_VERSION})
+if (NOT MEMESTRING_SONAME_SUFFIX_DISABLE)
+  set_target_properties(${MEME_PROJECT_NAME} PROPERTIES VERSION ${PROJECT_VERSION})
+endif()
 
 install(TARGETS ${MEME_PROJECT_NAME}
     RUNTIME DESTINATION bin
