--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,7 +10,7 @@ set (MEMESTRING_PROJECT_NAME ${MEME_PROJECT_NAME} PARENT_SCOPE)
 
 project(${MEME_PROJECT_NAME} VERSION 0.0.1 LANGUAGES C)
 
-option(MEMESTRING_SONAME_SUFFIX_DISABLE "Disable soname suffix" OFF)
+option(MEMESTRING_SONAME_SUFFIX_ENABLE "Disable soname suffix" ON)
 # 设置 C 语言标准
 # set(CMAKE_C_STANDARD 11)
 # set(CMAKE_C_STANDARD_REQUIRED ON)
@@ -46,7 +46,7 @@ set_target_properties(${MEME_PROJECT_NAME} PROPERTIES
 # 设置版本号
 # string(TIMESTAMP BUILD_DATE "%Y%m%d%H%M")
 
-if (NOT MEMESTRING_SONAME_SUFFIX_DISABLE)
+if (MEMESTRING_SONAME_SUFFIX_ENABLE)
   set_target_properties(${MEME_PROJECT_NAME} PROPERTIES VERSION ${PROJECT_VERSION})
 endif()
 
