--- a/projects/vs/libmeme_string/libmeme_string.vcxproj
+++ b/projects/vs/libmeme_string/libmeme_string.vcxproj
@@ -108,6 +108,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;LIBMEMESTRING_EXPORTS;_WINDOWS;_USRDLL;MEME_OPTION__BUILD_SHARED;MMOPT__HEADTAIL_MEMCHECK_ENABLED=1;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -144,6 +145,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;LIBMEMESTRING_EXPORTS;_WINDOWS;_USRDLL;MEME_OPTION__BUILD_SHARED;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
