--- a/unit_test/mmpp_unittest/mmpp_unittest.vcxproj.filters
+++ b/unit_test/mmpp_unittest/mmpp_unittest.vcxproj.filters
@@ -24,5 +24,11 @@
     <ClCompile Include="mmpp_variable_buffer_resize.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="mmpp_string_compare.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="mmpp_string_frontback.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
