--- a/unit_test/mmpp_unittest/mmpp_unittest.vcxproj
+++ b/unit_test/mmpp_unittest/mmpp_unittest.vcxproj
@@ -183,6 +183,8 @@ xcopy /y "$(ProjectDir)..\..\projects\vs\libmeme_string\$(Platform)\$(Configurat
     </PreBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="mmpp_string_compare.cpp" />
+    <ClCompile Include="mmpp_string_frontback.cpp" />
     <ClCompile Include="mmpp_string_split.cpp" />
     <ClCompile Include="mmpp_unittest.cpp" />
     <ClCompile Include="mmpp_variable_buffer_resize.cpp" />
