--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-
+﻿
 cmake_minimum_required(VERSION 3.14)
 
 if (WIN32)
@@ -11,6 +11,8 @@ set (MEMESTRING_PROJECT_NAME ${MEME_PROJECT_NAME} PARENT_SCOPE)
 project(${MEME_PROJECT_NAME} VERSION 0.0.1 LANGUAGES C)
 
 option(MEMESTRING_SONAME_SUFFIX_ENABLE "Disable soname suffix" ON)
+option(MEMESTRING_BENCHMARK_ENABLE "Enable benchmark" OFF)
+
 # 设置 C 语言标准
 # set(CMAKE_C_STANDARD 11)
 # set(CMAKE_C_STANDARD_REQUIRED ON)
@@ -19,6 +21,7 @@ option(MEMESTRING_SONAME_SUFFIX_ENABLE "Disable soname suffix" ON)
 # include_directories(3rdparty/cvector/include include include_private)
 
 message(STATUS "MEMESTRING_SONAME_SUFFIX_ENABLE: ${MEMESTRING_SONAME_SUFFIX_ENABLE}")
+message(STATUS "MEMESTRING_BENCHMARK_ENABLE: ${MEMESTRING_BENCHMARK_ENABLE}")
 
 # 添加链接库
 if (NOT WIN32)
@@ -58,3 +61,10 @@ install(TARGETS ${MEME_PROJECT_NAME}
     ARCHIVE DESTINATION lib
     )
 install(DIRECTORY include/ DESTINATION include)
+
+if (MEMESTRING_BENCHMARK_ENABLE)
+  set(MMBM_PARENT_HEADER_DIR   ${CMAKE_CURRENT_SOURCE_DIR}/include)
+  set(MMBM_PARENT_LIBRARY_FILE ${CMAKE_BINARY_DIR}/${CMAKE_SHARED_LIBRARY_PREFIX}${MEME_PROJECT_NAME}${CMAKE_SHARED_LIBRARY_SUFFIX})
+  set(MMBM_PARENT_LINKER_FILE  $<TARGET_LINKER_FILE:${MEME_PROJECT_NAME}>)
+  add_subdirectory(test/mmpp_benchmark)
+endif()
