--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,10 @@ if (WIN32)
 else()
   set (MEME_PROJECT_NAME    meme_string)
 endif()
-set (MEMESTRING_PROJECT_NAME ${MEME_PROJECT_NAME} PARENT_SCOPE)
+
+if (NOT CMAKE_CURRENT_SOURCE_DIR STREQUAL CMAKE_SOURCE_DIR)
+  set (MEMESTRING_PROJECT_NAME ${MEME_PROJECT_NAME} PARENT_SCOPE)
+endif()
 
 project(${MEME_PROJECT_NAME} VERSION 0.0.1 LANGUAGES C)
 
