--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,6 +15,7 @@ project(${MEME_PROJECT_NAME} VERSION 0.0.1 LANGUAGES C)
 
 option(MEMESTRING_SONAME_SUFFIX_ENABLE "Disable soname suffix" ON)
 option(MEMESTRING_BENCHMARK_ENABLE "Enable benchmark" OFF)
+option(MEMESTRING_UNITTEST_ENABLE  "Enable unittest"  OFF)
 
 # 设置 C 语言标准
 # set(CMAKE_C_STANDARD 11)
@@ -71,3 +72,11 @@ if (MEMESTRING_BENCHMARK_ENABLE)
   set(MMBM_PARENT_LINKER_FILE  $<TARGET_LINKER_FILE:${MEME_PROJECT_NAME}>)
   add_subdirectory(test/mmpp_benchmark)
 endif()
+
+if (MEMESTRING_UNITTEST_ENABLE)  
+  set(MMBM_PARENT_HEADER_DIR   ${CMAKE_CURRENT_SOURCE_DIR}/include)
+  set(MMBM_PARENT_LIBRARY_FILE ${CMAKE_BINARY_DIR}/${CMAKE_SHARED_LIBRARY_PREFIX}${MEME_PROJECT_NAME}${CMAKE_SHARED_LIBRARY_SUFFIX})
+  set(MMBM_PARENT_LINKER_FILE  $<TARGET_LINKER_FILE:${MEME_PROJECT_NAME}>)
+  add_subdirectory(unit_test/mmpp_unittest)
+endif()
+
